# kon

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: code-health-scan.md  e2e-test-coverage-review.md  local-models.md  opus_notes.md  theme-preview.html
scripts/: show_themes.py
src/kon/: __init__.py  async_utils.py  config.py  events.py  loop.py  metrics.py  notify.py  session.py  themes.py  turn.py
tests/: conftest.py  test_agentic_loop.py  test_compaction.py  test_config_error_fallback.py  test_config_injection.py  test_config_migration.py  test_handoff.py  test_handoff_link_interrupt.py  test_launch_warnings.py  test_metrics.py  test_model_provider_resolution.py  test_notifications_mode_config.py  test_notify.py  test_permission_mode_config.py  test_session_persistence.py  test_session_resume.py  test_system_prompt.py  test_themes.py  test_ui_notifications.py  test_update_notice_behavior.py
tests/context/: test_skills.py
tests/llm/: test_anthropic_provider.py  test_openai_codex_provider_errors.py
tests/tools/: test_bash_truncation.py  test_edit.py  test_edit_display.py  test_read.py  test_read_image_integration.py  test_web_fetch.py
tests/ui/: test_app_approval_keys.py  test_autocomplete.py  test_info_bar_clicks.py  test_info_bar_permissions.py  test_input_handoff.py  test_input_paste.py  test_input_shell_command.py  test_input_shell_style.py  test_keybindings.py  test_latex.py  test_permission_selection_status.py  test_permissions_command.py  test_shell_command.py  test_status_line.py  (+4 more)
tmp/: back_to_back.txt  demo.txt  demo_file.txt  tool_demo.txt  tool_demo_bash.txt  tool_demo_note.txt
(+44 files in other folders)
